--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,11 +9,12 @@
     - id: double-quote-string-fixer
     - id: end-of-file-fixer
     - id: flake8
+      args: [--max-line-length=120]
     - id: name-tests-test
     - id: requirements-txt-fixer
     - id: trailing-whitespace
 
-- repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
-  sha: master
-  hooks:
-    - id: pep257
+# - repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
+#   sha: master
+#   hooks:
+#     - id: pep257
