--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,11 +10,17 @@
     - id: end-of-file-fixer
     - id: flake8
       args: [--max-line-length=120]
+      exclude: blog/migrations/
     - id: name-tests-test
     - id: requirements-txt-fixer
     - id: trailing-whitespace
 
-# - repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
-#   sha: master
-#   hooks:
-#     - id: pep257
+- repo: https://github.com/FalconSocial/pre-commit-mirrors-pep257
+  sha: master
+  hooks:
+    - id: pep257
+
+- repo: git://github.com/Lucas-C/pre-commit-hooks
+  sha: master
+  hooks:
+  - id: remove-tabs
