--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,10 @@
     - id: end-of-file-fixer
     - id: flake8
       args: [--max-line-length=120]
-      exclude: blog/migrations/
+      excludes:
+        - blog/
+        - main/
+        - manage.py
     - id: name-tests-test
     - id: requirements-txt-fixer
     - id: trailing-whitespace
@@ -19,8 +22,7 @@
   sha: master
   hooks:
     - id: pep257
-
-- repo: git://github.com/Lucas-C/pre-commit-hooks
-  sha: master
-  hooks:
-  - id: remove-tabs
+      excludes:
+        - blog/
+        - main/
+        - manage.py
