Fix docstrings, delete db
Delete Db from previous commit
Add comment to pre-coomit why we ignore D203

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@
   sha: master
   hooks:
     - id: pep257
+      # There's a conflict with D211
       args: [--ignore=D203]
       exclude: main/migrations
 
