--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-dj-database-url==0.4.1
-Django==1.10.4
-gunicorn==19.6.0
-psycopg2==2.6.2
-whitenoise==3.2.2
+Django==1.9.12
+django-environ==0.4.1
+gunicorn==19.5.0
+whitenoise==3.2.3
