--- a/vagga.yaml
+++ b/vagga.yaml
@@ -63,24 +63,22 @@ commands:
       $PG_BIN/createdb -h 127.0.0.1 -p $PG_PORT $PG_DB -O $PG_USER
       $PG_BIN/psql -h 127.0.0.1 -p $PG_PORT -c "ALTER ROLE $PG_USER WITH ENCRYPTED PASSWORD '$PG_PASSWORD';"
       $PG_BIN/pg_ctl stop
-  run: !Command
-    description: Start server
-    container: django
-    run: python3 manage.py runserver
-  manage.py: !Command
-    description: Shortcut to manage.py
-    container: django
-    run: [python3, manage.py]
-  run-postgres: !Supervise
-    description: Start the django development server using Postgres database
-    children:
-      app: !Command
+  run-app: &run-app !Command
         container: django
         run: |
             python3 manage.py migrate
             python3 manage.py runserver --insecure
-      db: !Command
+  db: &run-db !Command
         container: postgres
         user-id: 200
         group-id: 200
         run: exec $PG_BIN/postgres -F --port=$PG_PORT
+  manage.py: !Command
+    description: Shortcut to manage.py
+    container: django
+    run: [python3, manage.py]
+  run: !Supervise
+    description: Start the django development server using Postgres database
+    children:
+      app: *run-app
+      db: *run-db
