--- a/vagga.yaml
+++ b/vagga.yaml
@@ -21,7 +21,7 @@ containers:
         - libpq
       - !Py3Requirements requirements.txt
     environ:
-          DATABASE_URL: postgresql://vagga:vagga@127.0.0.1:5433/mainDB
+      environ-file: /work/blog/.env
   postgres:
     setup:
     - !Ubuntu xenial
