--- a/vagga.yaml
+++ b/vagga.yaml
@@ -2,8 +2,8 @@ containers:
   pip-freeze:
     setup:
       - !Alpine v3.4
-      - !BuildDeps
-        - libpq
+      - &django-build !BuildDeps
+        - postgresql-dev
       - !Py3Install
         - pip
         - 'Django >=1.9,<1.10'
@@ -15,6 +15,7 @@ containers:
   django:
     setup:
       - !Alpine v3.4
+      - *django-build
       - !PipConfig
         dependencies: true
       - !Install
@@ -59,7 +60,7 @@ commands:
       set -ex
       ls -la /data
       $PG_BIN/pg_ctl initdb
-      $PG_BIN/pg_ctl -w -o '-F --port=$PG_PORT -k /tmp' start
+      $PG_BIN/pg_ctl -w -o '-F --port=$PG_PORT -k $PGDATA' start
       $PG_BIN/createuser -h 127.0.0.1 -p $PG_PORT $PG_USER
       $PG_BIN/createdb -h 127.0.0.1 -p $PG_PORT $PG_DB -O $PG_USER
       $PG_BIN/psql -h 127.0.0.1 -p $PG_PORT -c "ALTER ROLE $PG_USER WITH ENCRYPTED PASSWORD '$PG_PASSWORD';"
@@ -73,7 +74,7 @@ commands:
         container: postgres
         user-id: 200
         group-id: 200
-        run: exec $PG_BIN/postgres -F --port=$PG_PORT
+        run: exec $PG_BIN/postgres -F --port=$PG_PORT -k $PGDATA
   manage.py: !Command
     description: Shortcut to manage.py
     container: django
