--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,32 @@
 language: python
 python: 3.5
-cache: pip
-before_install: pip install -U pre-commit
-script: pre-commit run --all-files
+
+matrix:
+  fast_finish: true
+
+
+dist: xenial
+sudo: required
+
+addons:
+  apt:
+    packages: [vagga]
+    sources:
+      - sourceline: >-
+          deb [arch=amd64 trusted=yes] http://ubuntu.zerogw.com vagga-testing main
+
+cache:
+  timeout: 43200 # 12 hours
+  pip: true
+  directories:
+    - .vagga/.roots
+    - .vagga/.mnt
+    - .vagga/.transient
+
+
+before_install: 'echo ubuntu-mirror: http://mirrors.us.kernel.org/ubuntu/ > ~/.vagga.yaml'
+
+install: vagga _build test
+
+script:
+  - vagga test
