--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,4 @@ before_install: 'echo ubuntu-mirror: http://mirrors.us.kernel.org/ubuntu/ > ~/.v
 
 install: vagga _build test
 
-script:
-  - vagga test
+script: vagga pre-commit --all-files
