--- a/vagga.yaml
+++ b/vagga.yaml
@@ -56,12 +56,10 @@ containers:
       - !Ubuntu xenial
       - !PipConfig
         dependencies: true
-      - !BuildDeps
-        - git
+      - !Install [git]
       - !Depends .pre-commit-config.yaml
       - !Py3Requirements requirements-test.txt
-      - !Install
-        - git
+      - !Py3Install [setuptools]
       - !Sh HOME=/root pre-commit install-hooks
 commands:
   _pg-init: !Command
@@ -97,7 +95,7 @@ commands:
     children:
       app: *run-app
       db: *run-db
-  test: !Command
+  pre-commit: !Command
     description: Run tests
     container: test
-    run: pre-commit run --all-files
+    run: [pre-commit, run]
