--- a/vagga.yaml
+++ b/vagga.yaml
@@ -95,7 +95,11 @@ commands:
     children:
       app: *run-app
       db: *run-db
-  pre-commit: !Command
+  test: !Command
     description: Run tests
+    container: test
+    run: pre-commit run --all-files
+  pre-commit: !Command
+    description: Run pre-commit
     container: test
     run: [pre-commit, run]
