--- a/vagga.yaml
+++ b/vagga.yaml
@@ -51,6 +51,16 @@ containers:
       /run: !Tmpfs
         subdirs:
           postgresql: { mode: 0o777 }
+  test:
+    setup:
+      - !Ubuntu xenial
+      - !PipConfig
+        dependencies: true
+      - !Install [git]
+      - !Depends .pre-commit-config.yaml
+      - !Py3Requirements requirements-test.txt
+      - !Py3Install [setuptools]
+      - !Sh HOME=/root pre-commit install-hooks
 commands:
   _pg-init: !Command
     description: Init postgres database
@@ -85,3 +95,11 @@ commands:
     children:
       app: *run-app
       db: *run-db
+  test: !Command
+    description: Run tests
+    container: test
+    run: pre-commit run --all-files
+  pre-commit: !Command
+    description: Run pre-commit
+    container: test
+    run: [pre-commit, run]
