Fix vagga file add path to requiremetns

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@
       exclude: main/migrations
       args: [--max-line-length=120]
     - id: name-tests-test
+      args: [--django]
     - id: requirements-txt-fixer
     - id: trailing-whitespace
 
