Create separate pre-commit command

--- a/vagga.yaml
+++ b/vagga.yaml
@@ -100,6 +100,10 @@ commands:
     container: test
     run: python3 manage.py test
   lint: !Command
+    description: Run linters
+    container: test
+    run: pre-commit run --all-files
+  pre-commit: !Command
     description: Run pre-commit
     container: test
     run: [pre-commit, run]
