--- a/vagga.yaml
+++ b/vagga.yaml
@@ -106,4 +106,4 @@ commands:
   pre-commit: !Command
     description: Run pre-commit
     container: test
-    run: [pre-commit, run]
+    run: [pre-commit]
