--- a/vagga.yaml
+++ b/vagga.yaml
@@ -25,9 +25,9 @@ containers:
         dependencies: true
       - !Install
         - libpq
-      - !Py3Requirements requirements/main.txt
+      - !Py3Requirements requirements/production.txt
     environ:
-      DATABASE_URL: postgresql://vagga:vagga@127.0.0.1:5433/mainDB
+      DATABASE_URL: sqlite://vagga:vagga@127.0.0.1:5433/mainDB
     environ-file: /work/blog/.env
   postgres:
     setup:
