--- a/vagga.yaml
+++ b/vagga.yaml
@@ -27,7 +27,7 @@ containers:
         - libpq
       - !Py3Requirements requirements/production.txt
     environ:
-      DATABASE_URL: sqlite://vagga:vagga@127.0.0.1:5433/mainDB
+      DATABASE_URL: postgresql://vagga:vagga@127.0.0.1:5433/mainDB
     environ-file: /work/blog/.env
   postgres:
     setup:
